	Removed file /modules/Markbook/markbook_view_full.php

General: adjusted main menu style
	Edited file /index.php
	Edited file /themes/Default/css/main.css

General: tweaked appearance of warning, error and success messages:
	Edited file /themes/Default/css/main.css

Timetable: tweaked school timetable colour to match other system colours
	Edited file /modules/Timetable/moduleFunctions.php

v7.1.02
-------
User Admin: added ability to set list of selected departure reasons (instead of just plain text entry)
	New value in table gibbonSetting
	Edited files /modules/User Admin/userSettings*.php, user_manage_add*.php, user_manage_edit.php

Students: added departure reason to left students report
	Edited file /modules/Students/report_students_left.php

User Admin: added feature to allow Google Account OAuth login
	Added values to table gibbonSetting
	Edited files /modules/User Admin/userSettings*.php

Students: added new report to show student who should take letter home, accounting for older siblings
	New value in tables gibbonAction, gibbonPermission
	Added new file /modules/Students/report_lettersHome_byRollGroup.php

General: removed PHP notice from error page
	Edited file /error.php

Markbook: added ability to delete uploaded response file
	Edited file /modules/Markbook/markbook_edit_data.php
	New file /modules/Markbook/markbook_edit_data_responseDeleteProcess

User Admin: fixed "image delete link, confirm cancel not working" issue
	Edited file /modules/User Admin/user_manage_edit.php

Index: fixed warnings generated when caching set to 0
	Edited file /index.php

Timetable: fixed PHP notice issue
	Edited file /modules/Timetable/moduleFunctions.php

Login: added alternative lgoin in sidebar using Google OAuth2
	Added googleOauth folder to /lib
	Edited files /modules/User Admin/userSettings*.php
	Edited functions.php

v7.1.01
-------
Index: fixed issue with planner entries with no unit on homepage
	Edited file /index.php
