@@ -17,4 +17,52 @@ You should have received a copy of the GNU General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 */
 
+
+function getCurrentVersion($guid, $connection2, $version) {
+	$output="" ;
+	
+	$output.="<script type=\"text/javascript\">" ;
+		$output.="$(document).ready(function(){" ;
+			$output.="$.ajax({" ;
+				$output.="crossDomain: true, type:\"GET\", contentType: \"application/json; charset=utf-8\",async:false," ;
+				$output.="url: \"https://gibbonedu.org/services/version/version.php?callback=?\"," ;
+				$output.="data: \"\",dataType: \"jsonp\", jsonpCallback: 'fnsuccesscallback',jsonpResult: 'jsonpResult'," ;
+				$output.="success: function(data) {" ;
+					$output.="if (data['version']==='false') {" ;
+						$output.="$(\"#status\").attr(\"class\",\"error\");" ;
+						$output.="$(\"#status\").html('" . _('Version check failed') . ".') ;" ;
+					$output.="}" ;
+					$output.="else {" ;
+						$output.="if (data['version']<='" . $version . "') {" ;
+							$output.="$(\"#status\").attr(\"class\",\"success\");" ;
+							$output.="$(\"#status\").html('" . sprintf(_('Version check successful. Your Gibbon installation is up to date at %1$s.'), $version) . "') ;" ;
+						$output.="}" ;
+						$output.="else {" ;
+							$output.="$(\"#status\").attr(\"class\",\"warning\");" ;
+							$output.="$(\"#status\").html('" . sprintf(_('Version check successful. Your Gibbon installation is out of date. Please visit %1$s to download the latest version.'), "<a target=\"blank\" href=\'http://gibbonedu.org/download\'>the Gibbon download page</a>") . "') ;" ;
+						$output.="}" ;
+					$output.="}" ;
+				$output.="}," ;
+				$output.="error: function (data, textStatus, errorThrown) {" ;
+					$output.="$(\"#status\").attr(\"class\",\"error\");" ;
+					$output.="$(\"#status\").html('" . _('Version check failed') . ".') ;" ;
+				$output.="}" ;
+			$output.="});" ;
+		$output.="});" ;
+	$output.="</script>" ;
+	
+	$cuttingEdgeCode=getSettingByScope( $connection2, "System", "cuttingEdgeCode" ) ;
+	if ($cuttingEdgeCode!="Y") {
+		$output.="<div id='status' class='warning'>" ;
+			$output.="<div style='width: 100%; text-align: center'>" ;
+				$output.="<img style='margin: 10px 0 5px 0' src='" . $_SESSION[$guid]["absoluteURL"] . "/themes/Default/img/loading.gif' alt='Loading'/><br/>" ;
+				$output.="Checking for Gibbon updates." ;
+			$output.="</div>" ;
+		$output.="</div>" ;
+	}
+	
+	return $output ;
+}
+
+
 ?>
