@@ -751,8 +751,8 @@ div.success {
 	border-left: 6px solid #390;
 	color: #390; 
 	background-color: #D4F6DC;
-	font-size: 11.5px;
-	padding: 5px;
+	font-size: 12px;
+	padding: 10px;
 	margin: 10px 0px 15px 0px;
 	box-shadow: 2px 2px 2px rgba(50,50,50,0.3);
 }
